--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Dancing+Script&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+    <title>Biscoito da Sorte</title>
 </head>
 <body>
-    
+    <main>
+        <div class="screen1">
+            <h1>Qual é a sua sorte de hoje?</h1>
+            <p>Abra o biscoito e descubra!</p>
+
+            <form>
+                <button id="btnOpen">
+                    <img src="./assets/fortune-cookie.svg" alt="Biscoito-da-sorte">
+                </button>
+            </form>
+        </div>
+        <div class="screen2 hide">
+            <h1>Aqui está a sua sorte de hoje:</h1>
+            <p>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
+
+            <form>
+                <button id="btnOpenAgain">
+                    <img src="./assets/opened-cookie.svg" alt="Biscoito-da-sorte-aberto">
+                </button>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
