--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Dancing+Script&family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="style.css">
+
     <title>Biscoito da Sorte</title>
 </head>
 <body>
     <main>
-        <div class="screen1">
+        <div class="screen1 hide">
             <h1>Qual é a sua sorte de hoje?</h1>
             <p>Abra o biscoito e descubra!</p>
 
@@ -23,13 +25,14 @@
                 </button>
             </form>
         </div>
-        <div class="screen2 hide">
+        <div class="screen2">
             <h1>Aqui está a sua sorte de hoje:</h1>
             <p>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
 
             <form>
+                <img src="./assets/opened-cookie.svg" alt="Biscoito-da-sorte-aberto">
                 <button id="btnOpenAgain">
-                    <img src="./assets/opened-cookie.svg" alt="Biscoito-da-sorte-aberto">
+                    Abrir outro biscoito
                 </button>
             </form>
         </div>
