--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="screen2">
             <h1>Aqui está a sua sorte de hoje:</h1>
-            <p>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
+            <p class="message">Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
 
             <form>
                 <img src="./assets/opened-cookie.svg" alt="Biscoito-da-sorte-aberto">
