--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
 </head>
 <body>
     <main>
-        <div class="screen1 hide">
+        <div class="screen1">
             <h1>Qual é a sua sorte de hoje?</h1>
             <p>Abra o biscoito e descubra!</p>
 
             <form>
                 <button id="btnOpen">
-                    <img src="./assets/fortune-cookie.svg" alt="Biscoito-da-sorte">
+                    abrir
+                    
                 </button>
             </form>
         </div>
-        <div class="screen2">
+        <div class="screen2 hide">
             <h1>Aqui está a sua sorte de hoje:</h1>
-            <p class="message">Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
-
+            
             <form>
+                <p id="message">Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
                 <img src="./assets/opened-cookie.svg" alt="Biscoito-da-sorte-aberto">
                 <button id="btnOpenAgain">
                     Abrir outro biscoito
