--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <form>
                 <button id="btnOpen">
-                    abrir
+                    <img src="./assets/fortune-cookie.svg" alt="">
                     
                 </button>
             </form>
@@ -30,7 +30,7 @@
             <h1>Aqui está a sua sorte de hoje:</h1>
             
             <form>
-                <p id="message">Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
+                <p class="message"></p>
                 <img src="./assets/opened-cookie.svg" alt="Biscoito-da-sorte-aberto">
                 <button id="btnOpenAgain">
                     Abrir outro biscoito
@@ -38,5 +38,6 @@
             </form>
         </div>
     </main>
+    <script src="./main.js"></script>
 </body>
 </html>
